[package]
name = "mermer"
version = "0.1.0"
authors = ["Jakob L. Kreuze <zerodaysfordays@sdf.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mermer-rs = "0.1.0"
actix-web = "2.0"
actix-rt = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.5.1"
